# kuno

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: check_osc_colors.py
src/kuno/: __init__.py  __main__.py  app.py  app.tcss  cli.py  commands.py  config.py  log_view.py  logs.py  models.py  system_theme.py  table_sync.py
src/kuno/k8s/: actions.py  client.py  config.py  resources.py
tests/: conftest.py  test_app.py  test_cli.py  test_commands.py  test_k8s_actions.py  test_k8s_client.py  test_k8s_config.py  test_k8s_resources.py  test_logs.py  test_main.py  test_sort.py  test_system_theme.py  test_table_sync.py
