[project]
name = "kuno"
version = "0.1.0"
description = "Kubernetes TUI focused on logs"
readme = "README.md"
authors = [
    { name = "1cadumagalhaes", email = "github@cadumagalhaes.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "kubernetes-asyncio>=35.0.1",
    "pyyaml>=6.0.3",
    "textual>=8.2.1",
]

[project.scripts]
kuno = "kuno.cli:main"

[build-system]
requires = ["uv_build>=0.10.3"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "S", "B", "SIM", "PTH", "PERF", "RUF", "LOG"]

[tool.ruff.lint.isort]
known-first-party = ["kuno"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ty.environment]
python = ".venv"
python-version = "3.14"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
