[project]
name = "kuno"
version = "0.1.1"
description = "A terminal UI for Kubernetes focused on fast operational workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "1cadumagalhaes", email = "github@cadumagalhaes.dev" }
]
keywords = ["kubernetes", "tui", "terminal", "k8s", "textual", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
urls = { Homepage = "https://github.com/1cadumagalhaes/kuno" }
dependencies = [
    "kubernetes-asyncio>=35.0.1",
    "pyyaml>=6.0.3",
    "textual>=8.2.1",
]

[project.scripts]
kuno = "kuno.cli:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.13"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "S", "B", "SIM", "PTH", "PERF", "RUF", "LOG"]

[tool.ruff.lint.isort]
known-first-party = ["kuno"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ty.environment]
python = ".venv"
python-version = "3.14"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
